# HRFSandTable

./:  HRFSandTable 开发文档 V1.3.md  .gitignore  HRFSandTable 项目评估报告.md
spm-simulator/src-tauri/: Cargo.toml  tauri.conf.json
spm-simulator/src-tauri/src/: db.rs  error.rs  lib.rs
spm-simulator/src-tauri/src/commands/: error_tracking.rs  export.rs  field_mapping.rs  material.rs  mod.rs  performance.rs
spm-simulator/src-tauri/src/commands/config/: maintenance.rs  mod.rs  priority_batch.rs  priority_customer.rs  priority_dimension.rs  priority_product.rs  priority_weight.rs  strategy.rs  system.rs  tests.rs  types.rs
spm-simulator/src-tauri/src/engine/: constants.rs  evaluator.rs  mod.rs  priority.rs  roll_change.rs  scheduler.rs  sorter.rs  temp_calc.rs  test_helpers.rs  validator.rs
spm-simulator/src-tauri/src/migration/: defaults.sql  init.rs  init.sql
spm-simulator/src-tauri/src/models/: batch_priority_config.rs  customer_priority_config.rs  error_log.rs  export_template.rs  field_mapping.rs  import_batch.rs  maintenance_plan.rs  material.rs  mod.rs  operation_log.rs  performance_metric.rs  priority_dimension_config.rs  priority_weight_config.rs  product_type_priority_config.rs  schedule_item.rs  schedule_plan.rs  strategy_template.rs  system_config.rs  undo_stack.rs
spm-simulator/src-tauri/src/services/: backup_service.rs  error_tracking_service.rs  export_service.rs  import_service.rs  mod.rs  performance_service.rs  temp_service.rs  undo_service.rs
spm-simulator/src-tauri/src/utils/: datetime.rs  log.rs  mod.rs  season.rs  temperature.rs
(+220 files in other folders)
