[package]
name = "spm-simulator"
version = "0.1.2"
description = "热轧平整机组排程沙盘模拟系统"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "spm-simulator"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# ORM & Database
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
] }
sea-orm-migration = { version = "1.1" }

# Async
tokio = { version = "1", features = ["full"] }

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# Excel processing
calamine = "0.26"
rust_xlsxwriter = "0.80"

# CSV
csv = "1.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Cryptography
sha2 = "0.10"
